--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "expo": "~52.0.27",
     "expo-status-bar": "~2.0.1",
+    "prop-types": "^15.8.1",
     "react": "18.3.1",
-    "react-native": "0.76.6"
+    "react-icons": "^5.4.0",
+    "react-native": "0.76.6",
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
